scss/sections.scss
/* Sections */

@mixin section-date() {
  position: absolute;
  right: 0;
  font-style: italic;

  @media (min-width: 600px) {
    transform: translateY(100%);
  }
}

.section {
  h1 {
    font-size: 1.4em;
    font-weight: 100;
  }
  dl {
    position: relative;
  }

  ul {
    -webkit-padding-start: 2em;
    -moz-padding-start: 2em;

    li {
      white-space: nowrap;
    }
  }
}

.section:not(#experience) {
  dd:not(:last-child) {
    margin-bottom: 0.85em;
  }  
}

#employment dt, #education dt {
  @include section-date()
}

#experience {
  dl {
    @media (min-width: 600px) {
      columns: 2
    }
    
    & > dt, & > dd {
      break-inside: avoid
    }
  }
}

#projects {
  dl {
    & > dt {
      float: left;
      margin-right: 0.5em;
    }
    & > dd {
      margin-bottom: 0.5em;
    }
  }
}

